Fix skill cards styling not align center

--- a/app/sections/MySkills/MySkills.css
+++ b/app/sections/MySkills/MySkills.css
@@ -27,7 +27,7 @@
     filter: hue-rotate(45deg);
   }
 }
-.skill-card {
+.Skills__SkillCard {
   user-select: none;
   border-radius: 15px;
   backdrop-filter: blur(10px);
@@ -35,21 +35,21 @@
   box-shadow: var(--skill-shadow);
   border: var(--skill-border);
 }
-.skill-card:hover {
+.Skills__SkillCard:hover {
   filter: contrast(10%);
   filter: brightness(1.2);
   backdrop-filter: blur(3px) saturate(400%);
   transition: all 0.6s;
 }
 
-.skill-card:focus {
+.Skills__SkillCard:focus {
   filter: contrast(10%);
   filter: brightness(1.2);
   backdrop-filter: blur(3px) saturate(400%);
   transition: all 0.6s;
 }
 
-.skill-card.show {
+.Skills__SkillCard.show {
   animation: slide-in-bottom 1s both;
 }
 
